--- a/scanner.html
+++ b/scanner.html
@@ -43,50 +43,78 @@
             position: relative;
             width: 100%;
             max-width: 400px;
-            margin: 20px auto;
-            flex: 1;
+            margin: 12px auto;
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 0 12px;
+        }
+
+        .video-wrapper {
+            position: relative;
+            width: 100%;
+            border-radius: 12px;
+            overflow: hidden;
+            border: 2px solid #0f3460;
+            background: #000;
         }
 
         #video {
             width: 100%;
-            max-width: 400px;
-            border-radius: 12px;
-            border: 2px solid #0f3460;
+            display: block;
         }
 
-        .overlay {
+        .scan-region {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 200px;
             height: 200px;
-            border: 3px solid #e94560;
-            border-radius: 16px;
             pointer-events: none;
         }
 
-        .overlay::before,
-        .overlay::after {
-            content: '';
+        .scan-region .corner {
             position: absolute;
+            width: 30px;
+            height: 30px;
+            border-color: #e94560;
+            border-style: solid;
+            border-width: 0;
+        }
+
+        .corner.tl { top: 0; left: 0; border-top-width: 4px; border-left-width: 4px; border-radius: 8px 0 0 0; }
+        .corner.tr { top: 0; right: 0; border-top-width: 4px; border-right-width: 4px; border-radius: 0 8px 0 0; }
+        .corner.bl { bottom: 0; left: 0; border-bottom-width: 4px; border-left-width: 4px; border-radius: 0 0 0 8px; }
+        .corner.br { bottom: 0; right: 0; border-bottom-width: 4px; border-right-width: 4px; border-radius: 0 0 8px 0; }
+
+        .scan-line {
+            position: absolute;
+            left: 10%;
+            width: 80%;
+            height: 2px;
             background: #e94560;
+            animation: scanAnimation 2s linear infinite;
+        }
+
+        @keyframes scanAnimation {
+            0% { top: 10%; }
+            50% { top: 90%; }
+            100% { top: 10%; }
+        }
+
+        #canvas {
+            display: none;
         }
 
         .status {
-            margin-top: 16px;
-            padding: 12px 24px;
+            margin-top: 12px;
+            padding: 12px 20px;
             background: #16213e;
             border-radius: 8px;
             font-size: 14px;
             text-align: center;
-            min-height: 44px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 100%;
         }
 
         .status.success {
@@ -97,23 +125,54 @@
             background: #b71c1c;
         }
 
-        #canvas {
-            display: none;
+        .status.warning {
+            background: #e65100;
         }
 
-        .switch-btn {
+        .btn-row {
+            display: flex;
+            gap: 8px;
             margin-top: 12px;
-            padding: 10px 20px;
-            background: #0f3460;
-            color: #fff;
+            width: 100%;
+        }
+
+        .btn {
+            flex: 1;
+            padding: 12px 16px;
             border: none;
             border-radius: 8px;
             font-size: 14px;
             cursor: pointer;
+            color: #fff;
         }
 
-        .switch-btn:active {
+        .btn-switch {
+            background: #0f3460;
+        }
+
+        .btn-switch:active {
             background: #1a5276;
+        }
+
+        .btn-close {
+            background: #b71c1c;
+        }
+
+        .btn-close:active {
+            background: #d32f2f;
+        }
+
+        .debug {
+            margin-top: 8px;
+            padding: 8px 12px;
+            background: #0d0d1a;
+            border-radius: 6px;
+            font-size: 11px;
+            color: #666;
+            width: 100%;
+            max-height: 80px;
+            overflow-y: auto;
+            word-break: break-all;
         }
     </style>
 </head>
@@ -125,119 +184,296 @@
 </div>
 
 <div class="scanner-container">
-    <video id="video" autoplay playsinline muted></video>
-    <div class="overlay"></div>
+    <div class="video-wrapper">
+        <video id="video" autoplay playsinline muted></video>
+        <div class="scan-region">
+            <div class="corner tl"></div>
+            <div class="corner tr"></div>
+            <div class="corner bl"></div>
+            <div class="corner br"></div>
+            <div class="scan-line"></div>
+        </div>
+    </div>
+
     <canvas id="canvas"></canvas>
+
     <div class="status" id="status">Запуск камеры...</div>
-    <button class="switch-btn" id="switchBtn">Переключить камеру</button>
+
+    <div class="btn-row">
+        <button class="btn btn-switch" id="switchBtn">Переключить камеру</button>
+        <button class="btn btn-close" id="closeBtn">Закрыть</button>
+    </div>
+
+    <div class="debug" id="debug">Лог: инициализация...</div>
 </div>
 
-<!-- jsQR библиотека — декодирование QR из кадров видео -->
 <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 
 <script>
-    const tg = window.Telegram.WebApp;
-    tg.expand();
-    tg.ready();
-
-    // Получаем event_id из параметров, переданных через startParam
-    // Формат URL: scanner.html?event_id=123
-    const urlParams = new URLSearchParams(window.location.search);
-    const eventId = urlParams.get('event_id') || '';
-
+    // ====== ИНИЦИАЛИЗАЦИЯ ======
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d', { willReadFrequently: true });
     const statusEl = document.getElementById('status');
+    const debugEl = document.getElementById('debug');
     const switchBtn = document.getElementById('switchBtn');
+    const closeBtn = document.getElementById('closeBtn');
 
     let currentStream = null;
     let useFrontCamera = false;
-    let scanning = true;
-    let lastSentData = '';
-    let cooldown = false;
+    let scanActive = true;
+    let animFrameId = null;
 
-    async function startCamera() {
-        // Останавливаем предыдущий поток
-        if (currentStream) {
-            currentStream.getTracks().forEach(track => track.stop());
+    // Получаем event_id из URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const eventId = urlParams.get('event_id') || '0';
+
+    // Проверяем, запущено ли внутри Telegram WebApp
+    let tg = null;
+    let isTelegram = false;
+    try {
+        if (window.Telegram && window.Telegram.WebApp) {
+            tg = window.Telegram.WebApp;
+            tg.expand();
+            tg.ready();
+            isTelegram = true;
+            log('Telegram WebApp обнаружен');
+        } else {
+            log('Telegram WebApp НЕ обнаружен (автономный режим)');
         }
-
-        const constraints = {
-            video: {
-                facingMode: useFrontCamera ? 'user' : 'environment',
-                width: { ideal: 1280 },
-                height: { ideal: 720 }
-            },
-            audio: false
-        };
-
-        try {
-            currentStream = await navigator.mediaDevices.getUserMedia(constraints);
-            video.srcObject = currentStream;
-            statusEl.textContent = 'Камера активна. Ищу QR-код...';
-            statusEl.className = 'status';
-            requestAnimationFrame(scanFrame);
-        } catch (err) {
-            statusEl.textContent = 'Ошибка доступа к камере: ' + err.message;
-            statusEl.className = 'status error';
-        }
+    } catch (e) {
+        log('Ошибка Telegram WebApp: ' + e.message);
     }
 
-    function scanFrame() {
-        if (!scanning) return;
+    log('event_id = ' + eventId);
 
-        if (video.readyState === video.HAVE_ENOUGH_DATA) {
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+    // ====== ЛОГИРОВАНИЕ ======
+    function log(msg) {
+        const time = new Date().toLocaleTimeString();
+        debugEl.textContent = time + ' | ' + msg;
+        console.log(msg);
+    }
 
-            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-            const code = jsQR(imageData.data, imageData.width, imageData.height, {
-                inversionAttempts: 'dontInvert'
-            });
+    function setStatus(text, cls) {
+        statusEl.textContent = text;
+        statusEl.className = 'status' + (cls ? ' ' + cls : '');
+    }
 
-            if (code && code.data && !cooldown) {
-                const qrData = code.data;
+    // ====== КАМЕРА ======
+    async function startCamera() {
+        // Останавливаем предыдущий поток
+        stopCamera();
 
-                // Отправляем данные обратно в бот
-                // Формат: EVENT_ID:QR_DATA
-                const payload = JSON.stringify({
-                    event_id: eventId,
-                    qr_ qrData
-                });
+        const facingMode = useFrontCamera ? 'user' : 'environment';
+        log('Запуск камеры: ' + facingMode);
+        setStatus('Запуск камеры...');
 
-                statusEl.textContent = 'QR-код считан! Отправка...';
-                statusEl.className = 'status success';
+        // Пробуем несколько вариантов constraints
+        const constraintsList = [
+            // Вариант 1: точный facingMode
+            {
+                video: {
+                    facingMode: { exact: facingMode },
+                    width: { ideal: 1280 },
+                    height: { ideal: 720 }
+                },
+                audio: false
+            },
+            // Вариант 2: предпочтительный facingMode
+            {
+                video: {
+                    facingMode: facingMode,
+                    width: { ideal: 1280 },
+                    height: { ideal: 720 }
+                },
+                audio: false
+            },
+            // Вариант 3: просто видео
+            {
+                video: true,
+                audio: false
+            }
+        ];
 
-                // Защита от дублей — кулдаун 3 секунды
-                cooldown = true;
-                lastSentData = qrData;
-
-                // Отправляем данные в Telegram и закрываем
-                tg.sendData(payload);
-
-                // На случай если sendData не закроет окно
-                setTimeout(() => {
-                    cooldown = false;
-                    statusEl.textContent = 'Камера активна. Ищу QR-код...';
-                    statusEl.className = 'status';
-                }, 3000);
-
-                return;
+        let stream = null;
+        for (let i = 0; i < constraintsList.length; i++) {
+            try {
+                stream = await navigator.mediaDevices.getUserMedia(constraintsList[i]);
+                log('Камера запущена (вариант ' + (i + 1) + ')');
+                break;
+            } catch (err) {
+                log('Вариант ' + (i + 1) + ' не сработал: ' + err.message);
             }
         }
 
-        requestAnimationFrame(scanFrame);
+        if (!stream) {
+            setStatus('Не удалось получить доступ к камере', 'error');
+            log('Все варианты камеры провалились');
+            return;
+        }
+
+        currentStream = stream;
+        video.srcObject = stream;
+
+        // Ждём, пока видео реально начнёт воспроизводиться
+        video.onloadedmetadata = () => {
+            video.play().then(() => {
+                log('Видео запущено: ' + video.videoWidth + 'x' + video.videoHeight);
+                setStatus('Камера активна. Ищу QR-код...');
+                scanActive = true;
+                requestScan();
+            }).catch(err => {
+                log('Ошибка play(): ' + err.message);
+                setStatus('Ошибка воспроизведения видео', 'error');
+            });
+        };
+
+        video.onerror = (e) => {
+            log('Ошибка видео элемента');
+            setStatus('Ошибка видео', 'error');
+        };
     }
 
+    function stopCamera() {
+        scanActive = false;
+        if (animFrameId) {
+            cancelAnimationFrame(animFrameId);
+            animFrameId = null;
+        }
+        if (currentStream) {
+            currentStream.getTracks().forEach(track => {
+                track.stop();
+                log('Трек остановлен: ' + track.kind);
+            });
+            currentStream = null;
+        }
+        video.srcObject = null;
+    }
+
+    // ====== СКАНИРОВАНИЕ ======
+    function requestScan() {
+        if (!scanActive) return;
+        animFrameId = requestAnimationFrame(scanFrame);
+    }
+
+    function scanFrame() {
+        if (!scanActive) return;
+
+        if (video.readyState !== video.HAVE_ENOUGH_DATA) {
+            // Видео ещё не готово — ждём
+            requestScan();
+            return;
+        }
+
+        const w = video.videoWidth;
+        const h = video.videoHeight;
+
+        if (w === 0 || h === 0) {
+            requestScan();
+            return;
+        }
+
+        canvas.width = w;
+        canvas.height = h;
+        ctx.drawImage(video, 0, 0, w, h);
+
+        let imageData;
+        try {
+            imageData = ctx.getImageData(0, 0, w, h);
+        } catch (e) {
+            log('Ошибка getImageData: ' + e.message);
+            requestScan();
+            return;
+        }
+
+        const code = jsQR(imageData.data, w, h, {
+            inversionAttempts: 'dontInvert'
+        });
+
+        if (code && code.data) {
+            onQRDetected(code.data);
+            return;
+        }
+
+        // Продолжаем сканирование
+        requestScan();
+    }
+
+    // ====== QR НАЙДЕН ======
+    function onQRDetected(qrData) {
+        scanActive = false;
+        log('QR обнаружен: ' + qrData);
+        setStatus('QR-код считан: ' + qrData, 'success');
+
+        const payload = JSON.stringify({
+            event_id: eventId,
+            qr_ qrData
+        });
+
+        log('Отправка: ' + payload);
+
+        if (isTelegram) {
+            try {
+                tg.sendData(payload);
+                log('sendData() вызван');
+                // WebApp должен закрыться автоматически
+                // На всякий случай закрываем через 2 секунды
+                setTimeout(() => {
+                    try { tg.close(); } catch(e) {}
+                }, 2000);
+            } catch (e) {
+                log('Ошибка sendData: ' + e.message);
+                setStatus('Ошибка отправки данных', 'error');
+                // Даём возможность сканировать снова
+                setTimeout(() => {
+                    scanActive = true;
+                    requestScan();
+                    setStatus('Камера активна. Ищу QR-код...');
+                }, 3000);
+            }
+        } else {
+            // Автономный режим — просто показываем результат
+            setStatus('QR: ' + qrData + '\nevent_id: ' + eventId, 'success');
+            log('Автономный режим — данные не отправлены');
+            // Продолжаем сканирование через 3 секунды
+            setTimeout(() => {
+                scanActive = true;
+                requestScan();
+                setStatus('Камера активна. Ищу QR-код...');
+            }, 3000);
+        }
+    }
+
+    // ====== КНОПКИ ======
     switchBtn.addEventListener('click', () => {
         useFrontCamera = !useFrontCamera;
+        log('Переключение камеры: ' + (useFrontCamera ? 'фронтальная' : 'задняя'));
         startCamera();
     });
 
-    // Запускаем камеру
-    startCamera();
+    closeBtn.addEventListener('click', () => {
+        stopCamera();
+        if (isTelegram) {
+            try { tg.close(); } catch(e) {}
+        }
+        setStatus('Сканер закрыт');
+    });
+
+    // ====== ЗАПУСК ======
+    // Проверяем поддержку камеры
+    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+        log('getUserMedia поддерживается');
+        startCamera();
+    } else {
+        setStatus('Камера не поддерживается в этом браузере', 'error');
+        log('getUserMedia НЕ поддерживается');
+
+        // Пробуем через HTTPS-проверку
+        if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
+            log('ВНИМАНИЕ: страница открыта не через HTTPS!');
+            setStatus('Камера требует HTTPS. Текущий протокол: ' + location.protocol, 'error');
+        }
+    }
 </script>
 
 </body>
