--- a/scanner.html
+++ b/scanner.html
@@ -407,7 +407,7 @@
 
         const payload = JSON.stringify({
             event_id: eventId,
-            qr_ qrData
+            "qr_data": qrData
         });
 
         log('Отправка: ' + payload);
