--- a/scanner.html
+++ b/scanner.html
@@ -708,7 +708,7 @@
 
         const payload = JSON.stringify({
             event_id: eventId,
-            qr_ qrData
+            "qr_Data": qrData
         });
 
         log('Payload: ' + payload);
